# Copyright (C) 2020, Lawrence Berkeley National Laboratory.                
# All rights reserved.                                                      
#                                                                           
# This file is part of Taskworks. The full Taskworks copyright notice,    
# including terms governing use, modification, and redistribution, is       
# contained in the file COPYING at the root of the source code distribution 
# tree.                                                                     

SUBDIRS = native
DIST_SUBDIRS = native

if HAVE_ABT
   SUBDIRS += argobots
   DIST_SUBDIRS += argobots
endif